* Fixing the issue of ghost horizontal scroll. * Targetting the header using a custom calss name in order not to override other styles.

--- a/src/pages/PageWrapper/PageWrapper.css
+++ b/src/pages/PageWrapper/PageWrapper.css
@@ -1,17 +1,19 @@
 .page-structure {
-    height: 100vh;
+    height: 200vh;
     width: 100vw;
+    max-width: 100%;
+    overflow: hidden;
     display: grid;
-    grid-template-rows: 100px auto 250px;
+    grid-template-rows: 70px auto 250px;
 }
 
-header {
+.default-header {
     width: 100vw;
     height: 18rem;
     position: relative;
 }
 
-header>img {
+.default-header>img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -29,8 +31,4 @@ header>img {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-}
-
-main {
-    padding: 40px;
 }
